<resources>
    <string name="app_name">BroadcastBestPractice</string>
    <string name="login">login</string>
    <string name="account">Account :</string>
    <string name="password">Password :</string>
    <string name="warning">WARNING</string>
    <string name="warning_massage">you are forced to be offline. Please try to login again.</string>
    <string name="forced_offline">FORCED OFFLINE</string>
    <string name="ok">Ok</string>
    <string name="cancel">CANCEL</string>
    <string name="account_is_empty">account is empty</string>
    <string name="password_is_empty">password is empty</string>
    <string name="remember_password">remember the password</string>
    <string name="create_database">CREATE DATABASE</string>
    <string name="add_data">ADD DATA</string>
    <string name="update_data">UPDATE DATA</string>
    <string name="delete_data">DELETE DATA</string>
    <string name="query_data">QUERY DATA</string>
    <string name="create_succeed">CREATE SUCCEED</string>
    <string name="has_no_data">NO DATA EXISTS</string>
    <string name="make_call">MAKE CALL</string>
    <string name="notification_activity">NOTIFICATION ACTIVITY</string>
    <string name="notice">NOTICE</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="choose_from_album">CHOOSE FROM ALBUM</string>
    <string name="denied_permission">you denied the permission</string>
</resources>
